--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 # =============== #
 # Unity generated #
 # =============== #
-Temp/
-Library/
+/[Ll]ibrary/
+/[Tt]emp/
+/[Oo]bj/
+/[Bb]uild/
+/[Bb]uilds/
+/[Pp]rojectSettings/ProjectVersion.txt
+/Assets/AssetStoreTools*
  
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
